added more docstrings

--- a/python/notebooks/chi-squared-categorical.ipynb
+++ b/python/notebooks/chi-squared-categorical.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 168,
-   "id": "fdc2da80",
+   "execution_count": 1,
+   "id": "e060decb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f670ac1f",
+   "id": "cb9ab321",
    "metadata": {},
    "source": [
     "## Introduction\n",
@@ -43,11 +43,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7ad602c",
+   "id": "11266a6b",
    "metadata": {},
    "source": [
     "## Simple example\n",
-    "Consider 2 clothing stores, Primark, Next and Debenhams. They all sell shirts. \n",
+    "Consider 2 clothing stores, Primark, Next and Debenhams. They all sell shirts.\n",
+    "\n",
+    "Does a particular store significantly sell more shirts than another? The null hypothesis becomes that the number of each store's shirts comes from the same distribution.\n",
     "\n",
     "### When the categories are all similar\n",
     "Visiting a canididate stores on the high street, one can count the number of shirts in the stores. This might yield the results"
@@ -55,8 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "id": "742c2cb6",
+   "execution_count": 2,
+   "id": "4c78b6ae",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88adf02c",
+   "id": "8aa4cec1",
    "metadata": {},
    "source": [
     "where the number of blue shirts is always roughly twice the number of red shirts. There are 3 stores, and $28 + 27 + 32 = 87$ shirts in total, yielding an expected number of 29 shirts per store. One can then go ahead and calculate a $\\chi^2$ test statistic\n",
@@ -89,8 +91,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "965351de",
+   "execution_count": 3,
+   "id": "ef6cbed3",
    "metadata": {
     "scrolled": true
    },
@@ -111,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f172fb3",
+   "id": "0b462343",
    "metadata": {},
    "source": [
     "There are 3 cells, and the calculation is made on differences, so the degrees of freedom is 3 - 1 = 2. This allows calculation of a one-sided p-value."
@@ -119,8 +121,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "54c24a66",
+   "execution_count": 4,
+   "id": "a4b2fc6c",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c94ae09",
+   "id": "d6a6961e",
    "metadata": {},
    "source": [
     "So the probability of getting a result more extreme than the test statistic is 0.786. At an reasonable significance level, (e.g. 5% or 10%), this would lead to accepting the null hypothesis that the categories are all statistically similar. \n",
@@ -150,8 +152,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "id": "eec97098",
+   "execution_count": 5,
+   "id": "32d35dba",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f349c56",
+   "id": "e38cac3d",
    "metadata": {},
    "source": [
     "Thus the probability of getting a more extreme example is 0.0006. At a reasonable significance level, e.g. 5%, this would lead to a rejection of the null hypothesis, and one would conclude that the categories are different."
@@ -187,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2c2f90d",
+   "id": "1275b295",
    "metadata": {},
    "source": [
     "### Calculation using libs"
@@ -195,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bea2599",
+   "id": "c4c6498e",
    "metadata": {},
    "source": [
     "Scipy has a chisquare routine, where one can pass in the raw data to obtain the test statistic and p-value. The routine accepts an argument ddof, which affects the $k$ value used by the test. By default, k will be the length of the input array (call it N) minus 1. With a ddof argument, this becomes $k = N - 1 - \\textrm{ddof}$."
@@ -203,8 +205,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "id": "e1321914",
+   "execution_count": 6,
+   "id": "d62f3210",
    "metadata": {
     "scrolled": true
    },
@@ -215,7 +217,7 @@
        "Power_divergenceResult(statistic=14.96551724137931, pvalue=0.0005627029884150075)"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce17e229",
+   "id": "f5a74ed4",
    "metadata": {},
    "source": [
     "These numbers can also be obtained with statsmodels"
@@ -234,8 +236,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "id": "51f171f0",
+   "execution_count": 7,
+   "id": "91e22e25",
    "metadata": {
     "scrolled": false
    },
@@ -246,7 +248,7 @@
        "(14.96551724137931, 0.0005627029884150075)"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a8a45fe",
+   "id": "6e7c211c",
    "metadata": {},
    "source": [
     "## Multiple categories or sample sets - homogeneity/independence"
@@ -265,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad18a987",
+   "id": "ef348de4",
    "metadata": {},
    "source": [
     "Consider the case where now each of the stores sells multiple apparel, e.g. vests"
@@ -273,8 +275,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "id": "5e51982f",
+   "execution_count": 8,
+   "id": "ede158fa",
    "metadata": {
     "scrolled": false
    },
@@ -306,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99d97ae5",
+   "id": "de3a2bed",
    "metadata": {},
    "source": [
     "The totals can be used to get the 'expected' number of elements in each cell"
@@ -314,8 +316,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
-   "id": "ca321894",
+   "execution_count": 9,
+   "id": "e7568517",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f79e98a",
+   "id": "3b43b039",
    "metadata": {},
    "source": [
     "This allows a calculation of a chi-squared test statistic"
@@ -344,8 +346,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
-   "id": "b337bf44",
+   "execution_count": 10,
+   "id": "d776fb77",
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3052f55",
+   "id": "cc829e16",
    "metadata": {},
    "source": [
     "For tabular data, since the calculation comes down to differences, the number of degrees of freedom are (number of rows -1) x (number of columns - 1) = (3-1) x (2-1) = 2. This allows calculation of a p-value"
@@ -376,8 +378,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
-   "id": "0d3a6465",
+   "execution_count": 11,
+   "id": "d9af71cf",
    "metadata": {
     "scrolled": true
    },
@@ -397,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0386121",
+   "id": "e098d0ae",
    "metadata": {},
    "source": [
     "Thus the probability of getting a more extreme example is 0.928. So far this is all calculation. Consider, now, the hypothesis test questions that can be posed. The data has 2 parameters, so the variety of questions is larger.\n",
@@ -411,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c03a75a",
+   "id": "0dc2b1b6",
    "metadata": {},
    "source": [
     "### Calculation using libs\n",
@@ -421,8 +423,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
-   "id": "d0844574",
+   "execution_count": 12,
+   "id": "74fee3d7",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +438,7 @@
        "        [27.37078652, 56.62921348]]))"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "856504d1",
+   "id": "b430a023",
    "metadata": {},
    "source": [
     "[Contingency tables](https://www.statsmodels.org/dev/contingency_tables.html) in statsmodels can be useful for seeing the contributions to the test statistic (each element being the respective value for $\\frac{(O_i - E_i)^2}{E_i}$). The sum of the contributions retrieves the test statistic (which can be handy for seeing the entry that contribute heavily to breaking homogeneity/independence)"
@@ -455,8 +457,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
-   "id": "ad065880",
+   "execution_count": 13,
+   "id": "529e0b2e",
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +513,7 @@
        "Next       0.005023  0.002428"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,8 +525,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
-   "id": "26d381eb",
+   "execution_count": 14,
+   "id": "5f9dd41d",
    "metadata": {},
    "outputs": [
     {
@@ -542,18 +544,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebd20eb6",
+   "id": "cd3f0c18",
    "metadata": {},
    "source": [
     "## Goodness of fit\n",
     "\n",
-    "Consider the case now where a distributor knows how many shirts should be in the local stores, i.e. there is a predefined distribution. How close is the observation to the distributor's knowledge?"
+    "Consider the case now where a distributor knows how many shirts should be in the local stores, i.e. there is a predefined distribution. How close is the observation to the distributor's knowledge? The null hypothesis is that the observed distribution is sampled from the the predefined distribution."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
-   "id": "a44da013",
+   "execution_count": 15,
+   "id": "f8c0951c",
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f6e9580",
+   "id": "573cc143",
    "metadata": {},
    "source": [
     "This can be framed as a chi-squared test, where the null hypothesis is that the observed distribution is a \"good fit\" to the expected distribution.\n",
@@ -585,8 +587,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
-   "id": "c3475396",
+   "execution_count": 16,
+   "id": "721a0bfd",
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08a1cc6e",
+   "id": "88e04075",
    "metadata": {},
    "source": [
     "This is a slightly different calculation from before, since now all the $E_i$ have been supplied. The test statistic now becomes"
@@ -615,8 +617,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
-   "id": "76933f7b",
+   "execution_count": 17,
+   "id": "33caa50f",
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +636,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c56dfef3",
+   "id": "6e04f782",
    "metadata": {},
    "source": [
     "The degrees of freedom $k$ are given by $k = n - 1 - q$, where $n$ is the number of non-empty cells (3 in this case) and $p$ is the number of parameters in the model (e.g. for a 1D line of best fit, $y=mx+c$, this would have $q=2$). In this case, since no free parameters specify the fit, $q=0$. This means that a p-value is calculable"
@@ -642,8 +644,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
-   "id": "e605abc7",
+   "execution_count": 18,
+   "id": "4d2587fb",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +663,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf8941ab",
+   "id": "d47d33b2",
    "metadata": {},
    "source": [
     "There is a 0.991 probability of an observation being more extreme than the observed observation, which for any reasonable significance level would mean accepting the null hypothesis."
@@ -669,7 +671,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cdc7ad0",
+   "id": "4b34fe70",
    "metadata": {},
    "source": [
     "### Calculation using libs\n",
@@ -679,9 +681,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
-   "id": "27fe7850",
-   "metadata": {},
+   "execution_count": 19,
+   "id": "80ae4df2",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -689,13 +693,34 @@
        "Power_divergenceResult(statistic=0.018336070060208, pvalue=0.9908738632636134)"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "scipy.stats.chisquare(df[\"shirts\"], f_exp=df[\"expected_shirts_normed\"], ddof=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "4f926044",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.018336070060208, 0.9908738632636134)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "statsmodels.stats.gof.chisquare(df[\"shirts\"], f_exp=df[\"expected_shirts_normed\"], ddof=0)"
    ]
   }
  ],
