--- a/python/notebooks/t-tests.ipynb
+++ b/python/notebooks/t-tests.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d3cdd7fd",
+   "id": "e44b4e2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "405d5449",
+   "id": "181885bb",
    "metadata": {},
    "source": [
     "# T-tests\n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ffb35810",
+   "id": "a1485312",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8eda3d63",
+   "id": "e9cdbccb",
    "metadata": {},
    "source": [
     "One might perform a one or two tailed test based on the null and alternative hypotheses, e.g. if our test stat comes from a distribution $X' \\sim N(\\mu', \\sigma) $\n",
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a0a769cf",
+   "id": "383d1455",
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dab149d1",
+   "id": "83c893da",
    "metadata": {},
    "source": [
     "So there is a 0.33 probability of a more extreme sample occuring. At a 10% significance level, if the probability of a more extreme sample were less than 0.1, then the test sample would be so extreme that the null hypothesis would be rejected (in this case, the null hypthesis is not rejected).\n",
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e2baa25c",
+   "id": "0e31eeef",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39c41c2b",
+   "id": "1221058f",
    "metadata": {},
    "source": [
     "### Multi-sample Z-test"
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41c501e9",
+   "id": "9f8843f8",
    "metadata": {},
    "source": [
     "If instead of one sample, there are multiple samples, and one is concerned with whether or not the mean of those samples comes from the candidate distribution. This is essentially a one sample test, but makes use of the fact that if\n",
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0eb09376",
+   "id": "aa3ccb22",
    "metadata": {},
    "source": [
     "### Difference between two sample sets Z-test\n",
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc278c85",
+   "id": "1babf9ba",
    "metadata": {},
    "source": [
     "## T-tests\n",
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9afd80c6",
+   "id": "3588ae68",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
     "random.seed(42)\n",
     "n = 15\n",
     "\n",
-    "samples = [random.random() for _ in range(n)]\n",
+    "samples = [random.random() for _ in range(n)]  # samples from U[0,1)\n",
     "xbar = sum(samples) / n\n",
     "s = math.sqrt(sum([(x-xbar)**2 for x in samples])/(n-1))\n",
     "t_score = (xbar - 0.1) / (s / math.sqrt(n))\n",
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "337eab0f",
+   "id": "f85bae56",
    "metadata": {},
    "source": [
     "This can be used to calculate a p-value for a one-tailed test (since the t-distribution is symmetric, a two-tailed test would increase the p-value by a factor of 2). The degrees of freedom (since the test assumes that the input samples are independent) is $n-1$"
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "df101bf6",
+   "id": "3930faf0",
    "metadata": {
     "scrolled": true
    },
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "feffb081",
+   "id": "39f77881",
    "metadata": {},
    "source": [
     "The probability of a more extreme example is 0.0013; at the 10% significance level, this is less likely than 0.1, and so the null hypothesis is rejected. \n",
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2715fee2",
+   "id": "00de61f5",
    "metadata": {},
    "outputs": [
     {
@@ -307,10 +307,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a374cdb8",
+   "id": "9abb226f",
    "metadata": {},
    "source": [
-    "### Difference between two sample sets T-test\n",
+    "### Difference between two sample sets T-test - unequal variances\n",
     "\n",
     "This follows the same principle as the Z-test example, except now the test statistic uses the sample standard deviation, as opposed to a pre-defined standard deviation\n",
     "\n",
@@ -324,20 +324,21 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6d858ef1",
+   "id": "eb73bc83",
    "metadata": {},
    "outputs": [],
    "source": [
     "random.seed(43)\n",
     "n_1 = 11\n",
     "n_2 = 16\n",
-    "samples_1 = [random.random() for _ in range(n_1)]\n",
-    "samples_2 = [random.random() for _ in range(n_2)]"
+    "samples_1 = [random.random() for _ in range(n_1)]  # samples from U[0,1)\n",
+    "# samples from U[-0.5,1.5), so that the var is different from samples_1\n",
+    "samples_2 = [random.random()*2 - 0.5 for _ in range(n_2)]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "312444dc",
+   "id": "bcebacb3",
    "metadata": {},
    "source": [
     "The null and alternative hypotheses will typically be represented by assumptions on $\\mu_i$, e.g.\n",
@@ -352,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "50d7db58",
+   "id": "e18c7100",
    "metadata": {
     "scrolled": true
    },
@@ -361,7 +362,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t-score = -1.3453442754218516\n"
+      "t-score = -1.2797528973559824\n"
      ]
     }
    ],
@@ -378,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f5f8785",
+   "id": "1b17caba",
    "metadata": {},
    "source": [
     "In the case of Welch's t-test, there is a subtelty that the test statistic is not quite t-distributed. In simpler forms of the two-sample-set T-test, the test statistic (under the null hypothesis) is t-distributed, and the degrees of freedom is $(n_1 - 1) + (n_2 - 1)$. In the case of Welch's t-test, the test statistic is approximated by a t-distribution with degrees of freedom\n",
@@ -389,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "320c5361",
+   "id": "1fe735f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,14 +403,14 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1604dfb0",
+   "id": "e4067806",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "degrees of freedom = 19.69381842529788\n"
+      "degrees of freedom = 24.369240640703026\n"
      ]
     }
    ],
@@ -420,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92f7dc71",
+   "id": "28b862b5",
    "metadata": {},
    "source": [
     "Note that this value is a little different to what $n_1 + n_2 -2$ would have given. \n",
@@ -431,14 +432,14 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5000dd37",
+   "id": "6c24464f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "two-tailed p-value = 0.1938014455473255\n"
+      "two-tailed p-value = 0.2126820106340286\n"
      ]
     }
    ],
@@ -449,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbe7378f",
+   "id": "597c75cb",
    "metadata": {},
    "source": [
     "scipy.stats can directly compute the statistic"
@@ -458,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a3579e34",
+   "id": "f5abdca5",
    "metadata": {
     "scrolled": true
    },
@@ -466,7 +467,7 @@
     {
      "data": {
       "text/plain": [
-       "Ttest_indResult(statistic=-1.3453442754218516, pvalue=0.1938014455473255)"
+       "Ttest_indResult(statistic=-1.2797528973559833, pvalue=0.2126820106340284)"
       ]
      },
      "execution_count": 13,
@@ -475,20 +476,154 @@
     }
    ],
    "source": [
+    "# set equal_var to False, since the two sample sets do not have equal variance; this does a Welch's test\n",
     "scipy.stats.ttest_ind(samples_1, samples_2, equal_var=False)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5f2685ef",
+   "id": "2321f323",
    "metadata": {},
    "source": [
-    "The probability of getting a more extreme result is 0.194; using a significance level of 10%, the resultant p-value is not extreme enough for the null hypothesis to be rejected."
+    "Going along with the null hypothesis, the probability of getting a more extreme result is 0.213; using a significance level of 10%, the resultant p-value is not extreme enough for the null hypothesis to be rejected."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "96e52f53",
+   "id": "cb6bba9a",
+   "metadata": {},
+   "source": [
+    "### Difference between two sample sets T-test - equal variances\n",
+    "\n",
+    "In the case of the two sample sets sharing the same variance, a test statistic that actually follows a t-distribution can be calculated, as [here](https://en.wikipedia.org/wiki/Student%27s_t-test#Equal_or_unequal_sample_sizes,_similar_variances_(1/2_%3C_sX1/sX2_%3C_2))."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "3d303c91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random.seed(43)\n",
+    "n_1 = 11\n",
+    "n_2 = 16\n",
+    "samples_1 = [random.random() for _ in range(n_1)]  # samples from U[0,1)\n",
+    "samples_2 = [random.random() for _ in range(n_2)]  # samples from U[0,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "41160b9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t-score = -1.3797269616522334\n"
+     ]
+    }
+   ],
+   "source": [
+    "xbar_1 = sum(samples_1)/n_1\n",
+    "xbar_2 = sum(samples_2)/n_2\n",
+    "\n",
+    "s_1_sqr = sum([(x-xbar_1)**2 for x in samples_1])/(n_1-1)\n",
+    "s_2_sqr = sum([(x-xbar_2)**2 for x in samples_2])/(n_2-1)\n",
+    "\n",
+    "dof = n_1 + n_2 - 2\n",
+    "s_pooled = math.sqrt( ((n_1-1)*s_1_sqr + (n_2-1)*s_2_sqr)/dof)\n",
+    "t_score = (xbar_1 - xbar_2) / (s_pooled * math.sqrt(1.0/n_1 + 1.0/n_2))\n",
+    "print(f\"t-score = {t_score}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "affc46f7",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "two-tailed p-value = 0.1798872270104553\n"
+     ]
+    }
+   ],
+   "source": [
+    "p_value_2tail = scipy.stats.t.sf(abs(t_score), df=dof) * 2\n",
+    "print(f\"two-tailed p-value = {p_value_2tail}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84d72770",
+   "metadata": {},
+   "source": [
+    "which can be obtained from scipy.stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "bf0926cc",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-1.3797269616522334, pvalue=0.1798872270104553)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scipy.stats.ttest_ind(samples_1, samples_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ea815e7",
+   "metadata": {},
+   "source": [
+    "Note that this gives a slightly different answer to Welch's test, since that test is an approximation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "9c134b9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-1.3453442754218516, pvalue=0.1938014455473255)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# DANGER WILL ROBINSON - when the variances are the same, there is no need to use this approximation\n",
+    "scipy.stats.ttest_ind(samples_1, samples_2, equal_var=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f54e80c",
    "metadata": {},
    "source": [
     "## References\n",
