--- a/python/notebooks/t-tests.ipynb
+++ b/python/notebooks/t-tests.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e44b4e2b",
+   "id": "6f32b72b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "181885bb",
+   "id": "74a4551e",
    "metadata": {},
    "source": [
     "# T-tests\n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a1485312",
+   "id": "9fa17997",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9cdbccb",
+   "id": "2beec36e",
    "metadata": {},
    "source": [
     "One might perform a one or two tailed test based on the null and alternative hypotheses, e.g. if our test stat comes from a distribution $X' \\sim N(\\mu', \\sigma) $\n",
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "383d1455",
+   "id": "0c3f6883",
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83c893da",
+   "id": "57e18400",
    "metadata": {},
    "source": [
     "So there is a 0.33 probability of a more extreme sample occuring. At a 10% significance level, if the probability of a more extreme sample were less than 0.1, then the test sample would be so extreme that the null hypothesis would be rejected (in this case, the null hypthesis is not rejected).\n",
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0e31eeef",
+   "id": "019d3e99",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1221058f",
+   "id": "80361a18",
    "metadata": {},
    "source": [
     "### Multi-sample Z-test"
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f8843f8",
+   "id": "ea7e58d4",
    "metadata": {},
    "source": [
     "If instead of one sample, there are multiple samples, and one is concerned with whether or not the mean of those samples comes from the candidate distribution. This is essentially a one sample test, but makes use of the fact that if\n",
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa3ccb22",
+   "id": "0b1b877d",
    "metadata": {},
    "source": [
     "### Difference between two sample sets Z-test\n",
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1babf9ba",
+   "id": "c64481b6",
    "metadata": {},
    "source": [
     "## T-tests\n",
@@ -200,6 +200,8 @@
     "- the variances of the underlying distributions are unknown \n",
     "\n",
     "([this](https://bytepawn.com/beyond-the-central-limit-theorem.html) covers the failure cases in more detail). One can address the third and fourth cases by performing a t-test instead of a z-test. \n",
+    "\n",
+    "[this](https://www.analyticsvidhya.com/blog/2020/06/statistics-analytics-hypothesis-testing-z-test-t-test/) covers some choices of the flavour of test one might choose from a practical perspective.\n",
     "\n",
     "### Multi-sample T-tests\n",
     "\n",
@@ -223,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3588ae68",
+   "id": "8574342a",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f85bae56",
+   "id": "9ef2b3b7",
    "metadata": {},
    "source": [
     "This can be used to calculate a p-value for a one-tailed test (since the t-distribution is symmetric, a two-tailed test would increase the p-value by a factor of 2). The degrees of freedom (since the test assumes that the input samples are independent) is $n-1$"
@@ -256,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3930faf0",
+   "id": "943c6679",
    "metadata": {
     "scrolled": true
    },
@@ -276,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39f77881",
+   "id": "c57218e0",
    "metadata": {},
    "source": [
     "The probability of a more extreme example is 0.0013; at the 10% significance level, this is less likely than 0.1, and so the null hypothesis is rejected. \n",
@@ -287,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "00de61f5",
+   "id": "62738cba",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9abb226f",
+   "id": "5edf17f2",
    "metadata": {},
    "source": [
     "### Difference between two sample sets T-test - unequal variances\n",
@@ -324,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "eb73bc83",
+   "id": "b18be45f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcebacb3",
+   "id": "b3fcfcf1",
    "metadata": {},
    "source": [
     "The null and alternative hypotheses will typically be represented by assumptions on $\\mu_i$, e.g.\n",
@@ -353,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e18c7100",
+   "id": "b924e438",
    "metadata": {
     "scrolled": true
    },
@@ -379,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b17caba",
+   "id": "38aaea22",
    "metadata": {},
    "source": [
     "In the case of Welch's t-test, there is a subtelty that the test statistic is not quite t-distributed. In simpler forms of the two-sample-set T-test, the test statistic (under the null hypothesis) is t-distributed, and the degrees of freedom is $(n_1 - 1) + (n_2 - 1)$. In the case of Welch's t-test, the test statistic is approximated by a t-distribution with degrees of freedom\n",
@@ -390,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1fe735f3",
+   "id": "34ec01db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e4067806",
+   "id": "3a167857",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28b862b5",
+   "id": "409c549e",
    "metadata": {},
    "source": [
     "Note that this value is a little different to what $n_1 + n_2 -2$ would have given. \n",
@@ -432,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6c24464f",
+   "id": "d48b79c2",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "597c75cb",
+   "id": "7404e554",
    "metadata": {},
    "source": [
     "scipy.stats can directly compute the statistic"
@@ -459,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f5abdca5",
+   "id": "105e09aa",
    "metadata": {
     "scrolled": true
    },
@@ -482,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2321f323",
+   "id": "3e75957a",
    "metadata": {},
    "source": [
     "Going along with the null hypothesis, the probability of getting a more extreme result is 0.213; using a significance level of 10%, the resultant p-value is not extreme enough for the null hypothesis to be rejected."
@@ -490,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb6bba9a",
+   "id": "feac727a",
    "metadata": {},
    "source": [
     "### Difference between two sample sets T-test - equal variances\n",
@@ -501,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3d303c91",
+   "id": "ad3dcbb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "41160b9d",
+   "id": "d2315062",
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "affc46f7",
+   "id": "edbeac6c",
    "metadata": {
     "scrolled": true
    },
@@ -562,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84d72770",
+   "id": "7d62ef95",
    "metadata": {},
    "source": [
     "which can be obtained from scipy.stats"
@@ -571,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "bf0926cc",
+   "id": "655e98cf",
    "metadata": {
     "scrolled": true
    },
@@ -593,7 +595,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ea815e7",
+   "id": "812923a3",
    "metadata": {},
    "source": [
     "Note that this gives a slightly different answer to Welch's test, since that test is an approximation"
@@ -602,7 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9c134b9f",
+   "id": "177ed0fc",
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f54e80c",
+   "id": "5c8263f2",
    "metadata": {},
    "source": [
     "## References\n",
@@ -634,8 +636,10 @@
     "\n",
     "[3] _Beyond the Central Limit Theorem_ https://bytepawn.com/beyond-the-central-limit-theorem.html\n",
     "\n",
-    "[4] _Central Limit Theorem_ \n",
-    "https://sphweb.bumc.bu.edu/otlt/mph-modules/bs/bs704_probability/BS704_Probability12.html"
+    "[4] _Central Limit Theorem_\n",
+    "https://sphweb.bumc.bu.edu/otlt/mph-modules/bs/bs704_probability/BS704_Probability12.html\n",
+    "\n",
+    "[5] _Hypothesis Testing and Z-Test vs. T-Test_ https://www.analyticsvidhya.com/blog/2020/06/statistics-analytics-hypothesis-testing-z-test-t-test/"
    ]
   }
  ],
