--- a/python/notebooks/t-tests.ipynb
+++ b/python/notebooks/t-tests.ipynb
@@ -3,18 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6f32b72b",
+   "id": "fb96061a",
    "metadata": {},
    "outputs": [],
    "source": [
     "import scipy.stats\n",
     "import random\n",
-    "import math"
+    "import math\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "74a4551e",
+   "id": "85d3d3bd",
    "metadata": {},
    "source": [
     "# T-tests\n",
@@ -37,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9fa17997",
+   "id": "d6b4a686",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2beec36e",
+   "id": "ec68ee20",
    "metadata": {},
    "source": [
     "One might perform a one or two tailed test based on the null and alternative hypotheses, e.g. if our test stat comes from a distribution $X' \\sim N(\\mu', \\sigma) $\n",
@@ -76,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0c3f6883",
+   "id": "8423e18e",
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57e18400",
+   "id": "4cc33572",
    "metadata": {},
    "source": [
     "So there is a 0.33 probability of a more extreme sample occuring. At a 10% significance level, if the probability of a more extreme sample were less than 0.1, then the test sample would be so extreme that the null hypothesis would be rejected (in this case, the null hypthesis is not rejected).\n",
@@ -105,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "019d3e99",
+   "id": "ef64df53",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80361a18",
+   "id": "9900d8f0",
    "metadata": {},
    "source": [
     "### Multi-sample Z-test"
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea7e58d4",
+   "id": "2e17cde8",
    "metadata": {},
    "source": [
     "If instead of one sample, there are multiple samples, and one is concerned with whether or not the mean of those samples comes from the candidate distribution. This is essentially a one sample test, but makes use of the fact that if\n",
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b1b877d",
+   "id": "78eed3b3",
    "metadata": {},
    "source": [
     "### Difference between two sample sets Z-test\n",
@@ -184,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c64481b6",
+   "id": "8a3af4a7",
    "metadata": {},
    "source": [
     "## T-tests\n",
@@ -225,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8574342a",
+   "id": "9ce80641",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ef2b3b7",
+   "id": "432f14ac",
    "metadata": {},
    "source": [
     "This can be used to calculate a p-value for a one-tailed test (since the t-distribution is symmetric, a two-tailed test would increase the p-value by a factor of 2). The degrees of freedom (since the test assumes that the input samples are independent) is $n-1$"
@@ -258,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "943c6679",
+   "id": "522b7728",
    "metadata": {
     "scrolled": true
    },
@@ -278,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c57218e0",
+   "id": "275c898d",
    "metadata": {},
    "source": [
     "The probability of a more extreme example is 0.0013; at the 10% significance level, this is less likely than 0.1, and so the null hypothesis is rejected. \n",
@@ -289,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "62738cba",
+   "id": "34d64e31",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5edf17f2",
+   "id": "86f701bd",
    "metadata": {},
    "source": [
     "### Difference between two sample sets T-test - unequal variances\n",
@@ -326,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b18be45f",
+   "id": "502b8a46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3fcfcf1",
+   "id": "977fd9b4",
    "metadata": {},
    "source": [
     "The null and alternative hypotheses will typically be represented by assumptions on $\\mu_i$, e.g.\n",
@@ -355,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b924e438",
+   "id": "62738b19",
    "metadata": {
     "scrolled": true
    },
@@ -381,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38aaea22",
+   "id": "0ce969f3",
    "metadata": {},
    "source": [
     "In the case of Welch's t-test, there is a subtelty that the test statistic is not quite t-distributed. In simpler forms of the two-sample-set T-test, the test statistic (under the null hypothesis) is t-distributed, and the degrees of freedom is $(n_1 - 1) + (n_2 - 1)$. In the case of Welch's t-test, the test statistic is approximated by a t-distribution with degrees of freedom\n",
@@ -392,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "34ec01db",
+   "id": "647f376d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3a167857",
+   "id": "b7be6892",
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "409c549e",
+   "id": "78694587",
    "metadata": {},
    "source": [
     "Note that this value is a little different to what $n_1 + n_2 -2$ would have given. \n",
@@ -434,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d48b79c2",
+   "id": "14f75359",
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7404e554",
+   "id": "662e6c19",
    "metadata": {},
    "source": [
     "scipy.stats can directly compute the statistic"
@@ -461,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "105e09aa",
+   "id": "916eb9cd",
    "metadata": {
     "scrolled": true
    },
@@ -484,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e75957a",
+   "id": "45f92f51",
    "metadata": {},
    "source": [
     "Going along with the null hypothesis, the probability of getting a more extreme result is 0.213; using a significance level of 10%, the resultant p-value is not extreme enough for the null hypothesis to be rejected."
@@ -492,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "feac727a",
+   "id": "9b5231fc",
    "metadata": {},
    "source": [
     "### Difference between two sample sets T-test - equal variances\n",
@@ -503,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ad3dcbb2",
+   "id": "30a71cf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d2315062",
+   "id": "f20a2111",
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "edbeac6c",
+   "id": "3feaa1d1",
    "metadata": {
     "scrolled": true
    },
@@ -564,7 +565,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d62ef95",
+   "id": "840f44f9",
    "metadata": {},
    "source": [
     "which can be obtained from scipy.stats"
@@ -573,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "655e98cf",
+   "id": "81623652",
    "metadata": {
     "scrolled": true
    },
@@ -595,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "812923a3",
+   "id": "175f4db7",
    "metadata": {},
    "source": [
     "Note that this gives a slightly different answer to Welch's test, since that test is an approximation"
@@ -604,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "177ed0fc",
+   "id": "c68335ef",
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +626,129 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c8263f2",
+   "id": "e5114a9c",
+   "metadata": {},
+   "source": [
+    "### Difference between two sample sets T-test - dependent tests\n",
+    "\n",
+    "This is a special case of two sample sets, where the relation between the sets is not so much A-set versus B-set, but that the sets are the same size, and represent the same population entities under different conditions (e.g. a class of students who do an exam and get exam scores, and then the same set of students doing an exam a year later).\n",
+    "\n",
+    "Consider such a set of results, and the expectation that the increase in marks should be 5 points."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "4f96d5ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random.seed(44)\n",
+    "n = 15\n",
+    "\n",
+    "results_1 = [int(random.random() * 100) for _ in range(n)]  # uniform random ints in [0,100)\n",
+    "results_2 = [int(random.random() * 100) for _ in range(n)]  # uniform random ints in [0,100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5dcf44ac",
+   "metadata": {},
+   "source": [
+    "In this artificially created dataset, the student at index \"i\" in results_1 is the same student at index \"i\" in results_2; the relevant entry in results_2 is meant to be the same student's result when taking the exam a year later.\n",
+    "\n",
+    "Based on the expectation of a result increase, one can construct a hypothesis test\n",
+    "\n",
+    "$H_0:$ the difference between results_2 and results_1 has mean 5\n",
+    "\n",
+    "$H_1:$ the difference between results_2 and results_1 has mean < 5\n",
+    "\n",
+    "The t-score can be calculated as done [here](https://en.wikipedia.org/wiki/Student%27s_t-test#Dependent_t-test_for_paired_samples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "01d9c745",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t-score = -0.23560440840463792\n"
+     ]
+    }
+   ],
+   "source": [
+    "deltas = np.array(results_2) - np.array(results_1)\n",
+    "xbar = sum(deltas)/n\n",
+    "s = np.std(deltas, ddof=1)  # sample std deviation, courtesy of numpy\n",
+    "mu0 = 5  # the 5 from the null hypothesis\n",
+    "\n",
+    "t_score = (xbar - mu0)/(s/math.sqrt(n))\n",
+    "print(f\"t-score = {t_score}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "4b871e38",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "one-tailed p-value = 0.4085756326449204\n"
+     ]
+    }
+   ],
+   "source": [
+    "p_value_1tail = scipy.stats.t.sf(abs(t_score), df=n-1)\n",
+    "print(f\"one-tailed p-value = {p_value_1tail}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a943f39f",
+   "metadata": {},
+   "source": [
+    "which can also be computed directly using scipy.stats (which doesn't have an entry for placing $\\mu_0$, so the value for $\\mu_0$ has been subtracted from the second set of results, and the scipy.stats.ttest_rel function \"sees\" a problem of $H_0: \\mu=0, H_1: \\mu < 0$)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "9620c8fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_relResult(statistic=-0.23560440840463792, pvalue=0.4085756326449204)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scipy.stats.ttest_rel(np.array(results_2)-mu0, results_1, alternative=\"less\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6249c86",
+   "metadata": {},
+   "source": [
+    "At a 10% significance level, the p-value is not sufficiently extreme for the null hypothesis to be rejected."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98872ac5",
    "metadata": {},
    "source": [
     "## References\n",
